// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getKategorie(), getKategorieProTyp() 1`] = `
Array [
  Object {
    "id": "5a587e1a051c181132cf83b8",
    "pohlavi": "muž",
    "typ": "maraton",
    "vek": Object {
      "max": 39,
      "min": 18,
    },
    "zkratka": "1M",
  },
  Object {
    "id": "5a587e1a051c181132cf83ba",
    "pohlavi": "muž",
    "typ": "maraton",
    "vek": Object {
      "max": 49,
      "min": 40,
    },
    "zkratka": "2M",
  },
  Object {
    "id": "5a587e1a051c181132cf83bc",
    "pohlavi": "muž",
    "typ": "maraton",
    "vek": Object {
      "max": 59,
      "min": 50,
    },
    "zkratka": "3M",
  },
  Object {
    "id": "5a587e1b051c181132cf83d6",
    "pohlavi": "muž",
    "typ": "maraton",
    "vek": Object {
      "max": 69,
      "min": 60,
    },
    "zkratka": "4M",
  },
  Object {
    "id": "5a587e1b051c181132cf83d8",
    "pohlavi": "muž",
    "typ": "maraton",
    "vek": Object {
      "max": 150,
      "min": 70,
    },
    "zkratka": "5M",
  },
  Object {
    "id": "5a587e1a051c181132cf83c0",
    "pohlavi": "žena",
    "typ": "maraton",
    "vek": Object {
      "max": 39,
      "min": 18,
    },
    "zkratka": "1Ž",
  },
  Object {
    "id": "5a587e1a051c181132cf83c1",
    "pohlavi": "žena",
    "typ": "maraton",
    "vek": Object {
      "max": 49,
      "min": 40,
    },
    "zkratka": "2Ž",
  },
  Object {
    "id": "5a587e1a051c181132cf83c2",
    "pohlavi": "žena",
    "typ": "maraton",
    "vek": Object {
      "max": 59,
      "min": 50,
    },
    "zkratka": "3Ž",
  },
  Object {
    "id": "5a587e1b051c181132cf83dc",
    "pohlavi": "žena",
    "typ": "maraton",
    "vek": Object {
      "max": 69,
      "min": 60,
    },
    "zkratka": "4Ž",
  },
  Object {
    "id": "5a587e1b051c181132cf83de",
    "pohlavi": "žena",
    "typ": "maraton",
    "vek": Object {
      "max": 150,
      "min": 70,
    },
    "zkratka": "5Ž",
  },
]
`;

exports[`getKategorie(), getKategorieProTyp() 2`] = `
Array [
  Object {
    "id": "5a587e1b051c181132cf83d3",
    "pohlavi": "muž",
    "typ": "půlmaraton",
    "vek": Object {
      "max": 39,
      "min": 18,
    },
    "zkratka": "1M",
  },
  Object {
    "id": "5a587e1b051c181132cf83d4",
    "pohlavi": "muž",
    "typ": "půlmaraton",
    "vek": Object {
      "max": 49,
      "min": 40,
    },
    "zkratka": "2M",
  },
  Object {
    "id": "5a587e1b051c181132cf83d5",
    "pohlavi": "muž",
    "typ": "půlmaraton",
    "vek": Object {
      "max": 59,
      "min": 50,
    },
    "zkratka": "3M",
  },
  Object {
    "id": "5a587e1b051c181132cf83d7",
    "pohlavi": "muž",
    "typ": "půlmaraton",
    "vek": Object {
      "max": 150,
      "min": 60,
    },
    "zkratka": "4M",
  },
  Object {
    "id": "5a587e1b051c181132cf83d9",
    "pohlavi": "žena",
    "typ": "půlmaraton",
    "vek": Object {
      "max": 39,
      "min": 18,
    },
    "zkratka": "1Ž",
  },
  Object {
    "id": "5a587e1b051c181132cf83da",
    "pohlavi": "žena",
    "typ": "půlmaraton",
    "vek": Object {
      "max": 49,
      "min": 40,
    },
    "zkratka": "2Ž",
  },
  Object {
    "id": "5a587e1b051c181132cf83db",
    "pohlavi": "žena",
    "typ": "půlmaraton",
    "vek": Object {
      "max": 59,
      "min": 50,
    },
    "zkratka": "3Ž",
  },
  Object {
    "id": "5a587e1b051c181132cf83dd",
    "pohlavi": "žena",
    "typ": "půlmaraton",
    "vek": Object {
      "max": 150,
      "min": 60,
    },
    "zkratka": "4Ž",
  },
]
`;

exports[`getKategorie(), getKategorieProTyp() 3`] = `
Array [
  Object {
    "id": "5a587e1a051c181132cf83b3",
    "pohlavi": "muž",
    "typ": "cyklo",
    "vek": Object {
      "max": 35,
      "min": 18,
    },
    "zkratka": "1M",
  },
  Object {
    "id": "5a587e1a051c181132cf83b9",
    "pohlavi": "muž",
    "typ": "cyklo",
    "vek": Object {
      "max": 45,
      "min": 36,
    },
    "zkratka": "2M",
  },
  Object {
    "id": "5a587e1a051c181132cf83bb",
    "pohlavi": "muž",
    "typ": "cyklo",
    "vek": Object {
      "max": 150,
      "min": 46,
    },
    "zkratka": "3M",
  },
  Object {
    "id": "5a587e1a051c181132cf83b5",
    "pohlavi": "žena",
    "typ": "cyklo",
    "vek": Object {
      "max": 35,
      "min": 18,
    },
    "zkratka": "1Ž",
  },
  Object {
    "id": "5a587e1a051c181132cf83bd",
    "pohlavi": "žena",
    "typ": "cyklo",
    "vek": Object {
      "max": 45,
      "min": 36,
    },
    "zkratka": "2Ž",
  },
  Object {
    "id": "5a587e1a051c181132cf83bf",
    "pohlavi": "žena",
    "typ": "cyklo",
    "vek": Object {
      "max": 150,
      "min": 46,
    },
    "zkratka": "3Ž",
  },
]
`;

exports[`getKategorie(), getKategorieProTyp() 4`] = `
Array [
  Object {
    "id": "5a587e1b051c181132cf83cf",
    "pohlavi": "muž",
    "typ": "koloběžka",
    "vek": Object {
      "max": 150,
      "min": 18,
    },
    "zkratka": "1M",
  },
  Object {
    "id": "5a587e1b051c181132cf83d0",
    "pohlavi": "žena",
    "typ": "koloběžka",
    "vek": Object {
      "max": 150,
      "min": 18,
    },
    "zkratka": "1Ž",
  },
]
`;

exports[`getKategorie(), getKategorieProTyp() 5`] = `
Array [
  Object {
    "id": "5a587e1a051c181132cf83b1",
    "startovne": Object {
      "naMiste": 30,
      "predem": 30,
    },
    "typ": "pěší",
    "zkratka": "P",
  },
]
`;

exports[`getKategorie(), getKategorieProTyp() 6`] = `
Object {
  "cyklo": Array [
    Object {
      "id": "5a587e1a051c181132cf83b3",
      "pohlavi": "muž",
      "typ": "cyklo",
      "vek": Object {
        "max": 35,
        "min": 18,
      },
      "zkratka": "1M",
    },
    Object {
      "id": "5a587e1a051c181132cf83b9",
      "pohlavi": "muž",
      "typ": "cyklo",
      "vek": Object {
        "max": 45,
        "min": 36,
      },
      "zkratka": "2M",
    },
    Object {
      "id": "5a587e1a051c181132cf83bb",
      "pohlavi": "muž",
      "typ": "cyklo",
      "vek": Object {
        "max": 150,
        "min": 46,
      },
      "zkratka": "3M",
    },
    Object {
      "id": "5a587e1a051c181132cf83b5",
      "pohlavi": "žena",
      "typ": "cyklo",
      "vek": Object {
        "max": 35,
        "min": 18,
      },
      "zkratka": "1Ž",
    },
    Object {
      "id": "5a587e1a051c181132cf83bd",
      "pohlavi": "žena",
      "typ": "cyklo",
      "vek": Object {
        "max": 45,
        "min": 36,
      },
      "zkratka": "2Ž",
    },
    Object {
      "id": "5a587e1a051c181132cf83bf",
      "pohlavi": "žena",
      "typ": "cyklo",
      "vek": Object {
        "max": 150,
        "min": 46,
      },
      "zkratka": "3Ž",
    },
  ],
  "koloběžka": Array [
    Object {
      "id": "5a587e1b051c181132cf83cf",
      "pohlavi": "muž",
      "typ": "koloběžka",
      "vek": Object {
        "max": 150,
        "min": 18,
      },
      "zkratka": "1M",
    },
    Object {
      "id": "5a587e1b051c181132cf83d0",
      "pohlavi": "žena",
      "typ": "koloběžka",
      "vek": Object {
        "max": 150,
        "min": 18,
      },
      "zkratka": "1Ž",
    },
  ],
  "maraton": Array [
    Object {
      "id": "5a587e1a051c181132cf83b8",
      "pohlavi": "muž",
      "typ": "maraton",
      "vek": Object {
        "max": 39,
        "min": 18,
      },
      "zkratka": "1M",
    },
    Object {
      "id": "5a587e1a051c181132cf83ba",
      "pohlavi": "muž",
      "typ": "maraton",
      "vek": Object {
        "max": 49,
        "min": 40,
      },
      "zkratka": "2M",
    },
    Object {
      "id": "5a587e1a051c181132cf83bc",
      "pohlavi": "muž",
      "typ": "maraton",
      "vek": Object {
        "max": 59,
        "min": 50,
      },
      "zkratka": "3M",
    },
    Object {
      "id": "5a587e1b051c181132cf83d6",
      "pohlavi": "muž",
      "typ": "maraton",
      "vek": Object {
        "max": 69,
        "min": 60,
      },
      "zkratka": "4M",
    },
    Object {
      "id": "5a587e1b051c181132cf83d8",
      "pohlavi": "muž",
      "typ": "maraton",
      "vek": Object {
        "max": 150,
        "min": 70,
      },
      "zkratka": "5M",
    },
    Object {
      "id": "5a587e1a051c181132cf83c0",
      "pohlavi": "žena",
      "typ": "maraton",
      "vek": Object {
        "max": 39,
        "min": 18,
      },
      "zkratka": "1Ž",
    },
    Object {
      "id": "5a587e1a051c181132cf83c1",
      "pohlavi": "žena",
      "typ": "maraton",
      "vek": Object {
        "max": 49,
        "min": 40,
      },
      "zkratka": "2Ž",
    },
    Object {
      "id": "5a587e1a051c181132cf83c2",
      "pohlavi": "žena",
      "typ": "maraton",
      "vek": Object {
        "max": 59,
        "min": 50,
      },
      "zkratka": "3Ž",
    },
    Object {
      "id": "5a587e1b051c181132cf83dc",
      "pohlavi": "žena",
      "typ": "maraton",
      "vek": Object {
        "max": 69,
        "min": 60,
      },
      "zkratka": "4Ž",
    },
    Object {
      "id": "5a587e1b051c181132cf83de",
      "pohlavi": "žena",
      "typ": "maraton",
      "vek": Object {
        "max": 150,
        "min": 70,
      },
      "zkratka": "5Ž",
    },
  ],
  "pěší": Array [
    Object {
      "id": "5a587e1a051c181132cf83b1",
      "startovne": Object {
        "naMiste": 30,
        "predem": 30,
      },
      "typ": "pěší",
      "zkratka": "P",
    },
  ],
  "půlmaraton": Array [
    Object {
      "id": "5a587e1b051c181132cf83d3",
      "pohlavi": "muž",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 39,
        "min": 18,
      },
      "zkratka": "1M",
    },
    Object {
      "id": "5a587e1b051c181132cf83d4",
      "pohlavi": "muž",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 49,
        "min": 40,
      },
      "zkratka": "2M",
    },
    Object {
      "id": "5a587e1b051c181132cf83d5",
      "pohlavi": "muž",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 59,
        "min": 50,
      },
      "zkratka": "3M",
    },
    Object {
      "id": "5a587e1b051c181132cf83d7",
      "pohlavi": "muž",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 150,
        "min": 60,
      },
      "zkratka": "4M",
    },
    Object {
      "id": "5a587e1b051c181132cf83d9",
      "pohlavi": "žena",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 39,
        "min": 18,
      },
      "zkratka": "1Ž",
    },
    Object {
      "id": "5a587e1b051c181132cf83da",
      "pohlavi": "žena",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 49,
        "min": 40,
      },
      "zkratka": "2Ž",
    },
    Object {
      "id": "5a587e1b051c181132cf83db",
      "pohlavi": "žena",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 59,
        "min": 50,
      },
      "zkratka": "3Ž",
    },
    Object {
      "id": "5a587e1b051c181132cf83dd",
      "pohlavi": "žena",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 150,
        "min": 60,
      },
      "zkratka": "4Ž",
    },
  ],
}
`;
